# edm_mvp

./: README.md  pyproject.py
publicador/: __init__.py  __main__.py  run_local.py  word_to_wp.py
publicador/backend/: .dockerignore  Dockerfile  README.md  __init__.py  __main__.py  db.py  models.py  pyproject.toml  routes.py  run_local_test.py  task.py  tasks.py  word_to_wp.py
publicador/backend/db/: db.py  models.py
publicador/backend/tests/: test_preview.py
publicador/backend/tests/docs/: descripcion_test.md  prueba_02.docx
publicador/frontend/: app.js  index.html  style.css
publicador/test/docs/: descripcion_test.md  prueba_01.docx  prueba_03.docx
