[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "1.0.0"
description = "backend del publicador de contenido desde word de EDM a una web en wordpress"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Brian Malavenda", email = "brian.malavenda@gmail.com"}
]

dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.5.0",
    "rq>=1.15.0",
    "gunicorn>=20.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
api = "backend.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["backend"]